More database funcs to own qml file

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>PoiView.qml</file>
         <file>PoiViewForm.ui.qml</file>
         <file>MagCompass.qml</file>
+        <file>PoiDatabase.qml</file>
     </qresource>
 </RCC>
