Add area for slippy map

--- a/qml.qrc
+++ b/qml.qrc
@@ -7,5 +7,6 @@
         <file>PoiViewForm.ui.qml</file>
         <file>MagCompass.qml</file>
         <file>PoiDatabase.qml</file>
+        <file>SlippyMap.qml</file>
     </qresource>
 </RCC>
