--- a/qml.qrc
+++ b/qml.qrc
@@ -9,5 +9,6 @@
         <file>PoiDatabase.qml</file>
         <file>SlippyMap.qml</file>
         <file>SlippyTile.qml</file>
+        <file>SlippyMarker.qml</file>
     </qresource>
 </RCC>
