Query seems to work

--- a/qml.qrc
+++ b/qml.qrc
@@ -12,5 +12,6 @@
         <file>SlippyMarker.qml</file>
         <file>PoiList.qml</file>
         <file>ParseGpx.qml</file>
+        <file>ApiMultiPoi.qml</file>
     </qresource>
 </RCC>
